fix fb-comments inconsistant width on mobile 2

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -98,6 +98,11 @@ dd {
   }
 }
 
+/* fix fb-comments inconsistant width on mobile */
+.fb_iframe_widget_fluid span, iframe.fb_ltr {
+  width: 100% !important;
+}
+
 /************************************************************
   CONTAINER
 ************************************************************/
